# Hinedo

./: .gitignore  AUTHORS  HACKING  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  hinedo.c  hinedo.desktop  play  update  update_menu  version
data/: Makefile.am  Makefile.in
debian/: changelog  control  control.in  copyright  dirs  docs  files  rules  watch
po/: LINGUAS  POTFILES.in  en_GB.po  zh_TW.po
src/: Makefile.am  Makefile.in  applet-menu.xml  hinedo-applet.c  hinedo-applet.h  hinedo-applet.server.in.in  main.c
